feat(games): Implement pagination for game filtering
This commit introduces pagination support for the game filtering endpoint to handle large result sets efficiently. It also includes refactoring within the IGDB adapter to improve code maintainability.

**Key Changes:**

1.  **Pagination Implementation:**
    *   **API Contract:** Updated `openapi.yaml` to define `GamePageDTO` and modified the `/games/filter` response to return a paginated structure (content, total pages, total elements) instead of a flat list.
    *   **Domain & Service:** Updated `GameUseCase`, `GameService`, and `GameProviderPort` signatures to return `Page<Game>` instead of `List<Game>`.
    *   **Controller & Mapper:** Updated `GameController` to return `GamePageDTO` and added `toApiGamePage` in `GameMapper` to map domain pages to API DTOs.

2.  **IGDB Adapter Enhancements:**
    *   **Count & Paging:** Implemented logic in `IgdbApiAdapter` to fetch the total game count via the `/games/count` endpoint and construct a `PageImpl` for the response.
    *   **Refactoring:** Extracted repetitive rate limiting and authentication checks into helper methods (`rateLimiterInterrupted`, `ensureAuthentication`) to reduce boilerplate across methods.

3.  **Testing:**
    *   Updated `GameControllerIntegrationTest` to verify the presence of pagination fields (`totalPages`, `totalElements`) in the JSON response.
    *   Refactored `GameServiceUnitTest` to mock and assert `Page<Game>` objects.